Support test discovery and execution as first class features (#162)
* Test discovery and execution as 1st class feature, to better integrate with VS Code test controller

* Incorporate review feedback changes