@@ -27,15 +27,16 @@ import org.eclipse.collections.api.factory.Maps;
 import org.eclipse.collections.api.list.MutableList;
 import org.eclipse.collections.api.map.MutableMap;
 import org.finos.legend.engine.ide.lsp.extension.AbstractLSPGrammarExtensionTest;
-import org.finos.legend.engine.ide.lsp.extension.TestableCommandsSupport;
 import org.finos.legend.engine.ide.lsp.extension.completion.LegendCompletion;
 import org.finos.legend.engine.ide.lsp.extension.declaration.LegendDeclaration;
 import org.finos.legend.engine.ide.lsp.extension.diagnostic.LegendDiagnostic;
 import org.finos.legend.engine.ide.lsp.extension.diagnostic.LegendDiagnostic.Kind;
 import org.finos.legend.engine.ide.lsp.extension.diagnostic.LegendDiagnostic.Source;
 import org.finos.legend.engine.ide.lsp.extension.execution.LegendCommand;
-import org.finos.legend.engine.ide.lsp.extension.execution.LegendExecutionResult;
 import org.finos.legend.engine.ide.lsp.extension.state.SectionState;
+import org.finos.legend.engine.ide.lsp.extension.test.LegendTest;
+import org.finos.legend.engine.ide.lsp.extension.test.LegendTestAssertionResult;
+import org.finos.legend.engine.ide.lsp.extension.test.LegendTestExecutionResult;
 import org.finos.legend.engine.ide.lsp.extension.text.TextInterval;
 import org.finos.legend.engine.ide.lsp.extension.text.TextLocation;
 import org.finos.legend.engine.ide.lsp.extension.text.TextPosition;
@@ -301,7 +302,7 @@ public class TestPureLSPGrammarExtension extends AbstractLSPGrammarExtensionTest
                 "   vscodelsp::test::TestClass.all()->fu\n");
 
         MutableList<SectionState> sectionStates = newSectionStates(codeFiles);
-        Set<String> expectedCompletions = new HashSet<>(Arrays.asList("project"));
+        Set<String> expectedCompletions = Set.of("project");
         Set<String> actualCompletions = new HashSet<>();
         Iterable<? extends LegendCompletion> completions = this.extension.getCompletions(sectionStates.get(1), TextPosition.newPosition(2, 36));
         completions.forEach(completion -> actualCompletions.add(completion.getDescription()));
@@ -403,7 +404,7 @@ public class TestPureLSPGrammarExtension extends AbstractLSPGrammarExtensionTest
     }
 
     @Test
-    void functionTestableCommand()
+    void functionTestsDiscovery()
     {
         String code = "function model::Hello(name: String[1]): String[1]\n" +
                         "{\n" +
@@ -420,21 +421,34 @@ public class TestPureLSPGrammarExtension extends AbstractLSPGrammarExtensionTest
         SectionState sectionState = newSectionState("docId", code);
         List<? extends LegendCommand> commands = Lists.mutable.ofAll(this.extension.getCommands(sectionState))
                 .sortThis(Comparator.comparing(LegendCommand::getId).thenComparing(x -> x.getLocation().getTextInterval().getStart().getLine()));
-        Assertions.assertEquals(5, commands.size());
-
+        Assertions.assertEquals(1, commands.size());
         Assertions.assertEquals(PureLSPGrammarExtension.EXEC_FUNCTION_WITH_PARAMETERS_ID, commands.get(0).getId());
-        Assertions.assertEquals(TestableCommandsSupport.RUN_TEST_COMMAND_ID, commands.get(1).getId());
-        Assertions.assertEquals(TextInterval.newInterval(7, 4, 7, 63), commands.get(1).getLocation().getTextInterval());
-        Assertions.assertEquals(TestableCommandsSupport.RUN_TEST_COMMAND_ID, commands.get(2).getId());
-        Assertions.assertEquals(TextInterval.newInterval(8, 4, 8, 64), commands.get(2).getLocation().getTextInterval());
-        Assertions.assertEquals(TestableCommandsSupport.RUN_TEST_SUITE_COMMAND_ID, commands.get(3).getId());
-        Assertions.assertEquals(TextInterval.newInterval(5, 2, 9, 2), commands.get(3).getLocation().getTextInterval());
-        Assertions.assertEquals(TestableCommandsSupport.RUN_TESTS_COMMAND_ID, commands.get(4).getId());
-        Assertions.assertEquals(TextInterval.newInterval(0, 0, 10, 0), commands.get(4).getLocation().getTextInterval());
+
+        List<LegendTest> legendTests = this.extension.testCases(sectionState);
+        Assertions.assertEquals(1, legendTests.size());
+        LegendTest legendTest = legendTests.get(0);
+        Assertions.assertEquals("model::Hello_String_1__String_1_", legendTest.getId());
+        Assertions.assertEquals(TextInterval.newInterval(0, 0, 10, 0), legendTest.getLocation().getTextInterval());
+
+        Assertions.assertEquals(1, legendTest.getChildren().size());
+        LegendTest legendTestSuite = legendTest.getChildren().get(0);
+        Assertions.assertEquals("model::Hello_String_1__String_1_.testSuite_1", legendTestSuite.getId());
+        Assertions.assertEquals(TextInterval.newInterval(5, 2, 9, 2), legendTestSuite.getLocation().getTextInterval());
+
+        Assertions.assertEquals(2, legendTestSuite.getChildren().size());
+        List<LegendTest> tests = legendTestSuite.getChildren().stream().sorted(Comparator.comparing(x -> x.getLocation().getTextInterval().getStart())).collect(Collectors.toList());
+
+        LegendTest legendTest1 = tests.get(0);
+        Assertions.assertEquals("model::Hello_String_1__String_1_.testSuite_1.testPass", legendTest1.getId());
+        Assertions.assertEquals(TextInterval.newInterval(7, 4, 7, 63), legendTest1.getLocation().getTextInterval());
+
+        LegendTest legendTest2 = tests.get(1);
+        Assertions.assertEquals("model::Hello_String_1__String_1_.testSuite_1.testFail", legendTest2.getId());
+        Assertions.assertEquals(TextInterval.newInterval(8, 4, 8, 64), legendTest2.getLocation().getTextInterval());
     }
 
     @Test
-    void runAllTests()
+    void functionTestsExecution()
     {
         String code = "function model::Hello(name: String[1]): String[1]\n" +
                 "{\n" +
@@ -446,37 +460,33 @@ public class TestPureLSPGrammarExtension extends AbstractLSPGrammarExtensionTest
                 "    testPass | Hello('John') => 'Hello World! My name is John.';\n" +
                 "    testFail | Hello('John') => 'Hello World! My name is Johnx.';\n" +
                 "  )\n" +
-                "}\n" +
-                "function model::HelloNickName(name: String[1]): String[1]\n" +
-                "{\n" +
-                "  'Hello World! My nickname is ' + $name + '.';\n" +
-                "}\n" +
-                "{\n" +
-                "  testSuite_1\n" +
-                "  (\n" +
-                "    testPass | HelloNickName('John') => 'Hello World! My nickname is John.';\n" +
-                "    testFail | HelloNickName('John') => 'Hello World! My nickname is Johnx.';\n" +
-                "  )\n" +
                 "}\n";
 
         SectionState sectionState = newSectionState("doc", code);
-        List<? extends LegendExecutionResult> results = this.extension.executeAllTestCases(sectionState).sorted(Comparator.comparing(x -> x.getLocation().getTextInterval().getStart())).collect(Collectors.toList());
-        Assertions.assertEquals(4, results.size());
 
-        Assertions.assertEquals(Lists.mutable.of("model::Hello_String_1__String_1_", "testSuite_1", "testPass", "default"), results.get(0).getIds());
-        Assertions.assertEquals(LegendExecutionResult.Type.SUCCESS, results.get(0).getType());
-        Assertions.assertEquals(TextLocation.newTextSource("doc", 7, 4, 7, 63), results.get(0).getLocation());
+        TextLocation location1 = TextLocation.newTextSource("doc", TextInterval.newInterval(5, 4, 5, 5));
 
-        Assertions.assertEquals(Lists.mutable.of("model::Hello_String_1__String_1_", "testSuite_1", "testFail", "default"), results.get(1).getIds());
-        Assertions.assertEquals(LegendExecutionResult.Type.FAILURE, results.get(1).getType());
-        Assertions.assertEquals(TextLocation.newTextSource("doc", 8, 4, 8, 64), results.get(1).getLocation());
+        LegendTestAssertionResult assertionResult = LegendTestAssertionResult.failure("default", null, "expected:Hello World! My name is Johnx., Found : Hello World! My name is John.", null, null);
+        LegendTestExecutionResult failResult = LegendTestExecutionResult.failures(List.of(assertionResult), "model::Hello_String_1__String_1_.testSuite_1.testFail");
+        LegendTestExecutionResult passResult = LegendTestExecutionResult.success("model::Hello_String_1__String_1_.testSuite_1.testPass");
 
-        Assertions.assertEquals(Lists.mutable.of("model::HelloNickName_String_1__String_1_", "testSuite_1", "testPass", "default"), results.get(2).getIds());
-        Assertions.assertEquals(LegendExecutionResult.Type.SUCCESS, results.get(2).getType());
-        Assertions.assertEquals(TextLocation.newTextSource("doc", 18, 4, 18, 75), results.get(2).getLocation());
+        // all test
+        assertTestExecution("model::Hello_String_1__String_1_", Set.of(), sectionState, location1, List.of(failResult, passResult));
+        // skip suite
+        assertTestExecution("model::Hello_String_1__String_1_", Set.of("model::Hello_String_1__String_1_.testSuite_1"), sectionState, location1, List.of());
+        // skip one test
+        assertTestExecution("model::Hello_String_1__String_1_", Set.of("model::Hello_String_1__String_1_.testSuite_1.testFail"), sectionState, location1, List.of(passResult));
+        // skip a different test
+        assertTestExecution("model::Hello_String_1__String_1_", Set.of("model::Hello_String_1__String_1_.testSuite_1.testPass"), sectionState, location1, List.of(failResult));
+        // execute the suite
+        assertTestExecution("model::Hello_String_1__String_1_.testSuite_1", Set.of(), sectionState, location1, List.of(failResult, passResult));
+        // execute a test directly
+        assertTestExecution("model::Hello_String_1__String_1_.testSuite_1.testPass", Set.of(), sectionState, location1, List.of(passResult));
+    }
 
-        Assertions.assertEquals(Lists.mutable.of("model::HelloNickName_String_1__String_1_", "testSuite_1", "testFail", "default"), results.get(3).getIds());
-        Assertions.assertEquals(LegendExecutionResult.Type.FAILURE, results.get(3).getType());
-        Assertions.assertEquals(TextLocation.newTextSource("doc", 19, 4, 19, 76), results.get(3).getLocation());
+    private void assertTestExecution(String testId, Set<String> exclusions, SectionState sectionState, TextLocation location, List<LegendTestExecutionResult> expectedResults)
+    {
+        List<LegendTestExecutionResult> legendTestExecutionResults = this.extension.executeTests(sectionState, location, testId, exclusions);
+        Assertions.assertEquals(expectedResults, legendTestExecutionResults.stream().sorted(Comparator.comparing(LegendTestExecutionResult::getId)).collect(Collectors.toList()));
     }
 }
